# RAG-Risk-Propagation-Intelligence

./: README.md  pyproject.toml  rag-workplan.md  synthetic-data-plan.md
api/: dependencies.py  factories.py  main.py  schemas.py
api/routers/: entities.py  events.py  metrics.py  scenarios.py
common/: context.py  exceptions.py  logging.py
config/: base.yaml  dev.yaml  loader.py  prod.yaml  test_minimal_no_internet.yaml
data_ingestion/batch/: loaders.py  simple_repository.py
data_ingestion/mappers/: geospatial.py
data_ingestion/streaming/: consumer.py
events/classification/: classifier.py
events/propagation/: engine.py  impact_result.py  rules.py
graph/builders/: incremental_updates.py
graph/loaders/: builder.py
graph/queries/: impact_paths.py  vulnerability.py
graph/schema/: ontology.py
graph/utils/: graph_client.py
models/: domain.py  events.py
rag_pipeline/chunking/: base.py  simple_chunker.py
rag_pipeline/internet_search/: base.py  null_adapter.py  real_adapter.py
rag_pipeline/llm_clients/: base.py  fake_client.py  openai_client.py  openai_compatible_client.py
rag_pipeline/orchestration/: pipeline.py
rag_pipeline/prompts/: loader.py
rag_pipeline/reranking/: base.py  cross_encoder_reranker.py  null_reranker.py
rag_pipeline/retrieval/: base.py  chroma_store.py  memory_store.py
rag_risk_propagation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: stress_test.py
synthetic_data/generators/: events.py  network.py
synthetic_data/ground_truth/: calculators.py
synthetic_data/scenarios/: definitions.py
(+28 files in other folders)
