[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-risk-propagation"
version = "0.1.0"
description = "GraphRAG-based supply-chain risk propagation system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
vector = ["chromadb>=0.4.22"]
graph = ["neo4j>=5.17.0", "networkx>=3.2"]
geo = ["shapely>=2.0.3"]
kafka = ["kafka-python-ng>=24.0"]
llm = ["openai>=1.12.0", "requests>=2.31.0", "sentence-transformers>=2.5.0"]
all = [
    "rag-risk-propagation[vector,graph,geo,kafka,llm]",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "common*", "config*", "data_ingestion*", "events*", "graph*", "models*", "rag_pipeline*", "synthetic_data*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
